<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TFL Live Status</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="page_title">Hendon Central Status</string>
    <string name="updated">updated</string>
    <string name="title_activity_my_stations">Manage stations</string>
    <string name="add_new_station">Add new station</string>
    <string name="manage_stations">Manage stations</string>
    <string name="add_a_station">Add a station</string>
    <string name="remove_station">Remove from my stations</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="no_connection">There\'s no connection to the internet</string>
    <string name="station_deleted">has been removed from favourites</string>
    <string name="station_added">has been added to favourites</string>
    <string name="appwidget_text">Example</string>
    <string name="add_widget">Add widget</string>
    <string name="dummy_destination">Destination</string>
    <string name="dummy_timeto">3min</string>
    <string name="dummy_location">Where is it now</string>
    <string name="line_icon_description">Line icon</string>
    <string name="dummy_direction">Direction</string>
    <string name="title_activity_maps">Find in the map</string>
    <string name="find_in_map">Find in map</string>

</resources>
