<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/EntryList.ListItem"
    >

    <ImageView
        android:id="@+id/station_icon"
        style="@style/EntryList.ItemIcon"
        android:src="@drawable/northern"
        android:contentDescription="@string/line_icon_description" />

    <LinearLayout
        style="@style/EntryList.ItemContent"
        >

        <LinearLayout
            style="@style/EntryList.ItemHeader"
            >
            <TextView
                style="@style/EntryList.ItemDestination"
                android:id="@+id/item_destination"
                android:text="@string/dummy_destination" />

            <TextView
                style="@style/EntryList.ItemTimeTo"
                android:id="@+id/item_time_to"
                android:text="@string/dummy_timeto"
                />
        </LinearLayout>

        <TextView
            style="@style/EntryList.ItemCurrentLocation"
            android:id="@+id/item_subtitle"
            android:text="@string/dummy_location" />
    </LinearLayout>

</LinearLayout>