<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/refreshing"
        android:checkable="false"
        android:title=""
        android:orderInCategory="1"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_48dp"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh">
    </item>

    <item
        android:id="@+id/action_manage_stations"
        android:orderInCategory="100"
        android:title="@string/manage_stations">
    </item>

    <item
        android:id="@+id/action_find_in_map"
        android:orderInCategory="100"
        android:title="@string/find_in_map">
    </item>

</menu>